--- a/index.html
+++ b/index.html
@@ -1,51 +1,32 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
   <head>
-    <meta charset='utf-8'>
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="viewport" content="width=640" />
-
-    <link rel="stylesheet" href="stylesheets/core.css" media="screen"/>
-    <link rel="stylesheet" href="stylesheets/mobile.css" media="handheld, only screen and (max-device-width:640px)"/>
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css"/>
-
-    <script type="text/javascript" src="javascripts/modernizr.js"></script>
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script type="text/javascript" src="javascripts/headsmart.min.js"></script>
-    <script type="text/javascript">
-      $(document).ready(function () {
-        $('#main_content').headsmart()
-      })
-    </script>
     <title>Wintermute by jalcine</title>
+
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <script src="javascripts/scale.fix.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
   </head>
-
   <body>
-    <a id="forkme_banner" href="https://github.com/jalcine/libwintermutecore">View on GitHub</a>
-    <div class="shell">
-
+    <div class="wrapper">
       <header>
-        <span class="ribbon-outer">
-          <span class="ribbon-inner">
-            <h1>Wintermute</h1>
-            <h2>The core of an artificial intelligence application framework.</h2>
-          </span>
-          <span class="left-tail"></span>
-          <span class="right-tail"></span>
-        </span>
+        <h1>Wintermute</h1>
+        <p>The core of an artificial intelligence application framework.</p>
+        <p class="view"><a href="https://github.com/jalcine/libwintermutecore">View the Project on GitHub <small>jalcine/libwintermutecore</small></a></p>
+        <ul>
+          <li><a href="https://github.com/jalcine/libwintermutecore/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/jalcine/libwintermutecore/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/jalcine/libwintermutecore">View On <strong>GitHub</strong></a></li>
+        </ul>
       </header>
-
-      <section id="downloads">
-        <span class="inner">
-          <a href="https://github.com/jalcine/libwintermutecore/zipball/master" class="zip"><em>download</em> .ZIP</a><a href="https://github.com/jalcine/libwintermutecore/tarball/master" class="tgz"><em>download</em> .TGZ</a>
-        </span>
-      </section>
-
-
-      <span class="banner-fix"></span>
-
-
-      <section id="main_content">
+      <section>
         <h1>
 <a name="wintermute" class="anchor" href="#wintermute"><span class="octicon octicon-link"></span></a>Wintermute</h1>
 
@@ -59,21 +40,12 @@ and <a href="./CONTRIBUTING.markdown">contributing</a> are also provided. Winter
 
 <p><strong>This is alpha software, so alpha that it does nothing.</strong></p>
       </section>
-
-      <footer>
-        <span class="ribbon-outer">
-          <span class="ribbon-inner">
-            <p>this project by <a href="https://github.com/jalcine">jalcine</a> can be found on <a href="https://github.com/jalcine/libwintermutecore">GitHub</a></p>
-          </span>
-          <span class="left-tail"></span>
-          <span class="right-tail"></span>
-        </span>
-        <p>Generated with <a href="http://pages.github.com">GitHub Pages</a> using Merlot</p>
-        <span class="octocat"></span>
-      </footer>
-
     </div>
-
+    <footer>
+      <p>Project maintained by <a href="https://github.com/jalcine">jalcine</a></p>
+      <p>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></p>
+    </footer>
+    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
     
   </body>
 </html>
