--- a/index.html
+++ b/index.html
@@ -19,26 +19,64 @@
       <header>
         <h1>Wintermute</h1>
         <p>The core of an artificial intelligence application framework.</p>
-        <p class="view"><a href="https://github.com/jalcine/libwintermutecore">View the Project on GitHub <small>jalcine/libwintermutecore</small></a></p>
+        <p class="view"><a href="https://github.com/jalcine/wintermute">View the Project on GitHub <small>jalcine/wintermute</small></a></p>
         <ul>
-          <li><a href="https://github.com/jalcine/libwintermutecore/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/jalcine/libwintermutecore/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/jalcine/libwintermutecore">View On <strong>GitHub</strong></a></li>
+          <li><a href="https://github.com/jalcine/wintermute/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/jalcine/wintermute/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/jalcine/wintermute">View On <strong>GitHub</strong></a></li>
         </ul>
       </header>
       <section>
-        <h1>
-<a name="wintermute" class="anchor" href="#wintermute"><span class="octicon octicon-link"></span></a>Wintermute</h1>
+        <pre><code>  __      _(_)_ __ | |_ ___ _ __ _ __ ___  _   _| |_ ___ 
+  \ \ /\ / / | '_ \| __/ _ \ '__| '_ ` _ \| | | | __/ _ \
+   \ V  V /| | | | | ||  __/ |  | | | | | | |_| | ||  __/
+    \_/\_/ |_|_| |_|\__\___|_|  |_| |_| |_|\__,_|\__\___|
+</code></pre>
 
-<p>Wintermute's a weird project. Describing it in a single line would be unfair
-for the project too, so I <a href="http://jalcine.me">wrote a blog post about it</a>. This project
-is the maintained sources for <code>libwintermutecore</code>and <code>wintermute-driver</code>.
-See the <a href="./doc/LibraryAsCore.markdown">docs about this</a> For installation 
-instructions, view the <a href="./INSTALLING.markdown">INSTALLING</a> file. Instructions for <a href="./TESTING.markdown">testing</a> 
-and <a href="./CONTRIBUTING.markdown">contributing</a> are also provided. Wintermute currently depends on 
-<a href="http://qt-project.org/downloads">Qt 4.8.4</a> and <a href="http://cmake.org">CMake</a>.</p>
+<blockquote>
+<p>"The future is already here. It's just unevenly distributed." -
+William Gibson, <a href="http://www.goodreads.com/book/show/22328">Neuromancer (1984)</a>.</p>
+</blockquote>
 
-<p><strong>This is alpha software, so alpha that it does nothing.</strong></p>
+<p><a href="https://travis-ci.org/jalcine/wintermute?branch=develop"><img src="https://travis-ci.org/jalcine/wintermute.svg?branch=develop" alt="Build Status"></a>
+<a href="https://coveralls.io/r/jalcine/wintermute?branch=develop"><img src="https://img.shields.io/coveralls/jalcine/wintermute.svg?branch=develop" alt="Coverage Status"></a>
+<a href="http://waffle.io/jalcine/wintermute"><img src="https://badge.waffle.io/jalcine/wintermute.png?label=ready&amp;title=Ready" alt="Stories Ready to be Worked On"></a>
+<a href="http://waffle.io/jalcine/wintermute"><img src="https://badge.waffle.io/jalcine/wintermute.png?label=In%20Progress&amp;title=In%20Progress" alt="Stories Being Worked On"></a>
+<a href="https://waffle.io/jalcine/wintermute/metrics"><img src="https://graphs.waffle.io/jalcine/wintermute/throughput.svg" alt="Throughput Graph"></a></p>
+
+<h1>
+<a id="synopsis" class="anchor" href="#synopsis" aria-hidden="true"><span class="octicon octicon-link"></span></a>Synopsis</h1>
+
+<p>Wintermute's a software project that intends to be a launching pad into
+self-driven hyper-connectivity of hardware and software. The whole purpose
+of this particular tree is to build a core library, a driver binary
+(more on that) and a few plugins to get the show started. Check out
+<a href="http://jalcine.me/weblog/ambitions-wintermute/">this weblog post</a> to really understand the mission behind Wintermute.
+<em>Yes, this is yet another Internet of Things project.</em> But this isn't meant to
+be "web scale" or all of that. It's meant to work in a controlled environment
+under specific constraints (most devices running Linux, etc).</p>
+
+<h1>
+<a id="building--contributing" class="anchor" href="#building--contributing" aria-hidden="true"><span class="octicon octicon-link"></span></a>Building &amp; Contributing</h1>
+
+<p>Building, requirement and installation information all live in
+<a href="./INSTALL.markdown"><code>INSTALL.markdown</code></a>. Pointers for contributing on the project are
+located in <a href="./CONTRIBUTING.markdown"><code>CONTRIBUTING.markdown</code></a>. So far, Wintermute works on a
+<a href="./INSTALL.markdown#platforms">few platforms</a>, but feel free to build for yours and try it out.
+This project is <a href="https://vagrantup.com">Vagrant</a> enabled.</p>
+
+<p><strong>This is alpha software, so alpha that it does nothing.</strong> But in due time, my
+friend.</p>
+
+<h1>
+<a id="todo" class="anchor" href="#todo" aria-hidden="true"><span class="octicon octicon-link"></span></a>TODO</h1>
+
+<ul>
+<li>[ ] abstracted configuration framework</li>
+<li>[ ] preliminary RPC framework (using modules + calls)</li>
+<li>[x] plugin loading infrastructure</li>
+<li>[x] versioning support</li>
+</ul>
       </section>
     </div>
     <footer>
