Update link to blog post.

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ William Gibson, <a href="http://www.goodreads.com/book/show/22328">Neuromancer (
 self-driven hyper-connectivity of hardware and software. The whole purpose
 of this particular tree is to build a core library, a driver binary
 (more on that) and a few plugins to get the show started. Check out
-<a href="http://jalcine.me/weblog/ambitions-wintermute/">this weblog post</a> to really understand the mission behind Wintermute.
+<a href="https://jacky.wtf/weblog/ambitions-wintermute/">this weblog post</a> to really understand the mission behind Wintermute.
 <em>Yes, this is yet another Internet of Things project.</em> But this isn't meant to
 be "web scale" or all of that. It's meant to work in a controlled environment
 under specific constraints (most devices running Linux, etc).</p>
